# api_db_connector

./: README.md  pyproject.toml
api/: data.py  db_conn.py  fastapi_app.py  get.py  models.py  my_data_generator.py  views.py
api/migrations/: 0001_initial.py
config/: asgi.py  settings.py  urls.py
hh/: connection_to_api.py  db_hh_ru_connection.py  models.py
hh/migrations/: 0001_initial.py
